# ai_img_detect

./: Makefile  README.md  pyproject.toml
notebooks/: adding_datasets.py
src/: constants.py  etl.py  main.py  model_pretrained.py  train_img.py  utils.py  utils_img.py
