[project]
name = "ai_img_detect"
version = "0.1.0"
description = "Open Source AI Img detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gcsfs>=2025.5.1",
  "jupyter>=1.1.1",
  "opencv-python>=4.11.0.86",
  "opencv-python-headless>=4.11.0.86",
  "pandas>=2.2.3",
  "pillow>=11.1.0",
  "scikit-image>=0.25.2",
  "scipy>=1.15.2",
  "timm",
  "scikit-learn>=1.7.0",
]


[project.optional-dependencies]
cpu = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]
cu128 = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]
xpu = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "xpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cpu", extra = "xpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cpu", extra = "xpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.ruff]
exclude = [
    "*.ipynb",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]
line-length = 80
indent-width = 4
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "UP007",
    "UP035",
    "ASYNC",
    "C4",  # comprehensions
    "T20",  # print statement
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP006",  # non-pep585-annotation
    "RUF", # ruff-specific rules
    "TRY203", # useless-try-except
]
ignore = [
    "SIM108",
    "B905",  # zip-without-explicit-strict
    "RUF001", # ambiguous unicode character string
    "RUF002",
    "RUF003", # ambiguous unocode
    "ASYNC109", # async function with timeout parameter
    "C420",  # dict.from_keys
]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: list[str] | None = pydantic.Field(default=None)`.
extend-immutable-calls = ["pydantic.Field"]

[tool.black]
line-length = 80 

[tool.isort]
profile = "black"


